// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`変数 式 if 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 7,
                    \\"endOffset\\": 11,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 13,
                    \\"endOffset\\": 14,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 16,
                                                  \\"endOffset\\": 16,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 16,
                                                  \\"endColumn\\": 16,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 20,
                                                  \\"endOffset\\": 20,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 20,
                                                  \\"endColumn\\": 20,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 18,
                                      \\"endOffset\\": 18,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 18,
                                      \\"endColumn\\": 18,
                                      \\"tokenTypeIdx\\": 16,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 16,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ],
    \\"IfStatement\\": [
      {
        \\"name\\": \\"IfStatement\\",
        \\"children\\": {
          \\"IfToken\\": [
            {
              \\"image\\": \\"if\\",
              \\"startOffset\\": 28,
              \\"endOffset\\": 29,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 7,
              \\"endColumn\\": 8,
              \\"tokenTypeIdx\\": 29,
              \\"tokenType\\": {
                \\"name\\": \\"IfToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 29,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ],
          \\"LBrackets\\": [
            {
              \\"image\\": \\"(\\",
              \\"startOffset\\": 31,
              \\"endOffset\\": 31,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 10,
              \\"endColumn\\": 10,
              \\"tokenTypeIdx\\": 8,
              \\"tokenType\\": {
                \\"name\\": \\"LBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 8,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"(\\"
              }
            }
          ],
          \\"conditionalExpression\\": [
            {
              \\"name\\": \\"RelationExpression\\",
              \\"children\\": {
                \\"Expression\\": [
                  {
                    \\"name\\": \\"Expression\\",
                    \\"children\\": {
                      \\"Term\\": [
                        {
                          \\"name\\": \\"Term\\",
                          \\"children\\": {
                            \\"Factor\\": [
                              {
                                \\"name\\": \\"Factor\\",
                                \\"children\\": {
                                  \\"Identifier\\": [
                                    {
                                      \\"image\\": \\"value\\",
                                      \\"startOffset\\": 32,
                                      \\"endOffset\\": 36,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 11,
                                      \\"endColumn\\": 15,
                                      \\"tokenTypeIdx\\": 7,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Identifier\\",
                                        \\"PATTERN\\": {},
                                        \\"tokenTypeIdx\\": 7,
                                        \\"CATEGORIES\\": [],
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ],
          \\"RBrackets\\": [
            {
              \\"image\\": \\")\\",
              \\"startOffset\\": 37,
              \\"endOffset\\": 37,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 16,
              \\"endColumn\\": 16,
              \\"tokenTypeIdx\\": 9,
              \\"tokenType\\": {
                \\"name\\": \\"RBrackets\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 9,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\")\\"
              }
            }
          ],
          \\"LCurly\\": [
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 39,
              \\"endOffset\\": 39,
              \\"startLine\\": 3,
              \\"endLine\\": 3,
              \\"startColumn\\": 18,
              \\"endColumn\\": 18,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            },
            {
              \\"image\\": \\"{\\",
              \\"startOffset\\": 54,
              \\"endOffset\\": 54,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 14,
              \\"endColumn\\": 14,
              \\"tokenTypeIdx\\": 10,
              \\"tokenType\\": {
                \\"name\\": \\"LCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 10,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"{\\"
              }
            }
          ],
          \\"BrockStatement\\": [
            {
              \\"name\\": \\"BrockStatement\\",
              \\"children\\": {}
            },
            {
              \\"name\\": \\"BrockStatement\\",
              \\"children\\": {}
            }
          ],
          \\"RCurly\\": [
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 47,
              \\"endOffset\\": 47,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 7,
              \\"endColumn\\": 7,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            },
            {
              \\"image\\": \\"}\\",
              \\"startOffset\\": 62,
              \\"endOffset\\": 62,
              \\"startLine\\": 5,
              \\"endLine\\": 5,
              \\"startColumn\\": 7,
              \\"endColumn\\": 7,
              \\"tokenTypeIdx\\": 11,
              \\"tokenType\\": {
                \\"name\\": \\"RCurly\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 11,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false,
                \\"LABEL\\": \\"}\\"
              }
            }
          ],
          \\"ElseToken\\": [
            {
              \\"image\\": \\"else\\",
              \\"startOffset\\": 49,
              \\"endOffset\\": 52,
              \\"startLine\\": 4,
              \\"endLine\\": 4,
              \\"startColumn\\": 9,
              \\"endColumn\\": 12,
              \\"tokenTypeIdx\\": 30,
              \\"tokenType\\": {
                \\"name\\": \\"ElseToken\\",
                \\"PATTERN\\": {},
                \\"tokenTypeIdx\\": 30,
                \\"CATEGORIES\\": [],
                \\"categoryMatches\\": [],
                \\"categoryMatchesMap\\": {},
                \\"isParent\\": false
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`変数 演算 数値 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 7,
                    \\"endOffset\\": 11,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 13,
                    \\"endOffset\\": 14,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 16,
                                                  \\"endOffset\\": 16,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 16,
                                                  \\"endColumn\\": 16,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 20,
                                                  \\"endOffset\\": 20,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 20,
                                                  \\"endColumn\\": 20,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 18,
                                      \\"endOffset\\": 18,
                                      \\"startLine\\": 2,
                                      \\"endLine\\": 2,
                                      \\"startColumn\\": 18,
                                      \\"endColumn\\": 18,
                                      \\"tokenTypeIdx\\": 16,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 16,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 28,
                    \\"endOffset\\": 32,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 34,
                    \\"endOffset\\": 35,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"Identifier\\": [
                                                {
                                                  \\"image\\": \\"value\\",
                                                  \\"startOffset\\": 37,
                                                  \\"endOffset\\": 41,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 16,
                                                  \\"endColumn\\": 20,
                                                  \\"tokenTypeIdx\\": 7,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Identifier\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 7,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"NumberLiteral\\": [
                                                {
                                                  \\"image\\": \\"1\\",
                                                  \\"startOffset\\": 45,
                                                  \\"endOffset\\": 45,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 24,
                                                  \\"endColumn\\": 24,
                                                  \\"tokenTypeIdx\\": 4,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"NumberLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 4,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 43,
                                      \\"endOffset\\": 43,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 22,
                                      \\"endColumn\\": 22,
                                      \\"tokenTypeIdx\\": 16,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 16,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;

exports[`変数 演算 文字列 1`] = `
"{
  \\"name\\": \\"Program\\",
  \\"children\\": {
    \\"Assignment\\": [
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 7,
                    \\"endOffset\\": 11,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 13,
                    \\"endOffset\\": 14,
                    \\"startLine\\": 2,
                    \\"endLine\\": 2,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"StringLiteral\\": [
                                                {
                                                  \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                  \\"startOffset\\": 16,
                                                  \\"endOffset\\": 21,
                                                  \\"startLine\\": 2,
                                                  \\"endLine\\": 2,
                                                  \\"startColumn\\": 16,
                                                  \\"endColumn\\": 21,
                                                  \\"tokenTypeIdx\\": 3,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"StringLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 3,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      },
      {
        \\"name\\": \\"Assignment\\",
        \\"children\\": {
          \\"ToLeft\\": [
            {
              \\"name\\": \\"ToLeft\\",
              \\"children\\": {
                \\"to\\": [
                  {
                    \\"image\\": \\"value\\",
                    \\"startOffset\\": 29,
                    \\"endOffset\\": 33,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 7,
                    \\"endColumn\\": 11,
                    \\"tokenTypeIdx\\": 7,
                    \\"tokenType\\": {
                      \\"name\\": \\"Identifier\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 7,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"ToLeftToken\\": [
                  {
                    \\"image\\": \\"<-\\",
                    \\"startOffset\\": 35,
                    \\"endOffset\\": 36,
                    \\"startLine\\": 3,
                    \\"endLine\\": 3,
                    \\"startColumn\\": 13,
                    \\"endColumn\\": 14,
                    \\"tokenTypeIdx\\": 35,
                    \\"tokenType\\": {
                      \\"name\\": \\"ToLeftToken\\",
                      \\"PATTERN\\": {},
                      \\"tokenTypeIdx\\": 35,
                      \\"CATEGORIES\\": [],
                      \\"categoryMatches\\": [],
                      \\"categoryMatchesMap\\": {},
                      \\"isParent\\": false
                    }
                  }
                ],
                \\"from\\": [
                  {
                    \\"name\\": \\"Pipe\\",
                    \\"children\\": {
                      \\"RelationExpression\\": [
                        {
                          \\"name\\": \\"RelationExpression\\",
                          \\"children\\": {
                            \\"Expression\\": [
                              {
                                \\"name\\": \\"Expression\\",
                                \\"children\\": {
                                  \\"Term\\": [
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"Identifier\\": [
                                                {
                                                  \\"image\\": \\"value\\",
                                                  \\"startOffset\\": 38,
                                                  \\"endOffset\\": 42,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 16,
                                                  \\"endColumn\\": 20,
                                                  \\"tokenTypeIdx\\": 7,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"Identifier\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 7,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    },
                                    {
                                      \\"name\\": \\"Term\\",
                                      \\"children\\": {
                                        \\"Factor\\": [
                                          {
                                            \\"name\\": \\"Factor\\",
                                            \\"children\\": {
                                              \\"StringLiteral\\": [
                                                {
                                                  \\"image\\": \\"\\\\\\"test\\\\\\"\\",
                                                  \\"startOffset\\": 46,
                                                  \\"endOffset\\": 51,
                                                  \\"startLine\\": 3,
                                                  \\"endLine\\": 3,
                                                  \\"startColumn\\": 24,
                                                  \\"endColumn\\": 29,
                                                  \\"tokenTypeIdx\\": 3,
                                                  \\"tokenType\\": {
                                                    \\"name\\": \\"StringLiteral\\",
                                                    \\"PATTERN\\": {},
                                                    \\"tokenTypeIdx\\": 3,
                                                    \\"CATEGORIES\\": [],
                                                    \\"categoryMatches\\": [],
                                                    \\"categoryMatchesMap\\": {},
                                                    \\"isParent\\": false
                                                  }
                                                }
                                              ]
                                            }
                                          }
                                        ]
                                      }
                                    }
                                  ],
                                  \\"AdditionOperator\\": [
                                    {
                                      \\"image\\": \\"+\\",
                                      \\"startOffset\\": 44,
                                      \\"endOffset\\": 44,
                                      \\"startLine\\": 3,
                                      \\"endLine\\": 3,
                                      \\"startColumn\\": 22,
                                      \\"endColumn\\": 22,
                                      \\"tokenTypeIdx\\": 16,
                                      \\"tokenType\\": {
                                        \\"name\\": \\"Plus\\",
                                        \\"PATTERN\\": {},
                                        \\"CATEGORIES\\": [
                                          {
                                            \\"name\\": \\"AdditionOperator\\",
                                            \\"PATTERN\\": {},
                                            \\"tokenTypeIdx\\": 15,
                                            \\"CATEGORIES\\": [],
                                            \\"categoryMatches\\": [
                                              16,
                                              17
                                            ],
                                            \\"categoryMatchesMap\\": {
                                              \\"16\\": true,
                                              \\"17\\": true
                                            },
                                            \\"isParent\\": true
                                          }
                                        ],
                                        \\"tokenTypeIdx\\": 16,
                                        \\"categoryMatches\\": [],
                                        \\"categoryMatchesMap\\": {},
                                        \\"isParent\\": false
                                      }
                                    }
                                  ]
                                }
                              }
                            ]
                          }
                        }
                      ]
                    }
                  }
                ]
              }
            }
          ]
        }
      }
    ]
  }
}"
`;
